RESOLVED FIXED22997
ASSERTION FAILED: !m_resources.contains(url) in ApplicationCache::addResource()
https://bugs.webkit.org/show_bug.cgi?id=22997
Summary ASSERTION FAILED: !m_resources.contains(url) in ApplicationCache::addResource()
Alexey Proskuryakov
Reported 2008-12-26 03:30:19 PST
Fails on a test I have locally. Will submit both fix and test soon.
Attachments
proposed fix (20.25 KB, patch)
2008-12-26 03:37 PST, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2008-12-26 03:37:10 PST
Created attachment 26253 [details] proposed fix
Darin Adler
Comment 2 2008-12-26 09:30:07 PST
Comment on attachment 26253 [details] proposed fix r=me
Alexey Proskuryakov
Comment 3 2008-12-26 09:40:56 PST
Committed revision 39477.
Note You need to log in before you can comment on or make changes to this bug.