        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=22997
        ASSERTION FAILED: !m_resources.contains(url) in ApplicationCache::addResource()

        Tests: http/tests/appcache/top-frame-1.html
               http/tests/appcache/top-frame-2.html
               http/tests/appcache/top-frame-3.html
               http/tests/appcache/top-frame-4.html

        * loader/appcache/ApplicationCacheGroup.cpp: (WebCore::ApplicationCacheGroup::cacheForMainRequest):
        Fixed one more instance of top level frame being used for caching purposes.



Canonical link: https://commits.webkit.org/31676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39477 268f45cc-cd09-0410-ab3c-d52691b4dbfc